# OpenReservoirComputing

./: .gitignore  README.md  dt_RC.ipynb  orcspeedgpu.ipynb  pyproject.toml  readme.md
examples/: lorenz.ipynb
src/orc/: __init__.py  drivers.py  embeddings.py  rc.py  readouts.py  utils.py
src/orc/models/: __init__.py  esn.py
src/orc/readouts/: __init__.py  base.py  layers.py  training.py
src/orc/reservoirs/: __init__.py  base.py  drivers.py
tests/: test_drivers.py  test_embeddings.py  test_readouts.py
tests/models/: test_esn.py
